# pydanticai_rag

./: README.md  api.py  explorations.ipynb  ingestion.py  pdfs_to_text.py  pyproject.toml
backend/: constants.py  data_models.py  rag.py
frontend/: app.py
