[project]
name = "pydanticai-rags"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.1",
    "ipykernel>=7.2.0",
    "lancedb>=0.30.2",
    "ollama>=0.6.2",
    "pandas>=3.0.3",
    "pydantic-ai>=1.97.0",
    "pypdf>=6.11.0",
    "streamlit>=1.57.0",
    "uvicorn>=0.47.0",
]
